# rag-chatbot

./: .env  .gitignore  CLAUDE.md  PROVIDER_GUIDE.md  docker-compose.yaml  main.py  pyproject.toml  rest.http
app/: config.py  container.py  ingest.py  main.py  memory.py  retriever.py  schemas.py
app/models/: embedding.py  llm.py
app/providers/: __init__.py
app/providers/database/: __init__.py  database_provider_abc.py  qdrant_provider.py
app/providers/embedding/: __init__.py  bge_provider.py  embedding_provider_abc.py  voyage_provider.py
app/providers/llm/: gemini_provider.py  llm_provider_abc.py
app/providers/reranker/: __init__.py  flag_provider.py  reranker_provider_abc.py
app/services/: chat_service.py  ingestion_service.py
app/utils/: chunking.py  loaders.py
